--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <meta name="author" content="Johnnie Giacomelli e Michel ...">
     <meta name="description" content="Uma agência que cria e direciona o seu possionamento na internet, oferecendo vários serviços entre eles, marketing, divulgação de marca e identidade digital.">
     <meta name="robots" content="index, follow"> <!--já é padrão-->
-    <title>Agência Digital</title>
+    <title>Agência de Negócios Digitais</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" type="image/png" href="img/icone.png">
+    <link rel="icon" type="image/png" href="img/icon.png">
 </head>
 
 <body>
   <header>
     <nav>
       <div class="logo">
-        <h1>Agência Digital</h1>
+        <img src="img/logo.png" alt="Logo Agencia de Negócios Digitais">
       </div>
       <ul class="menu">
         <li><a href="#home">Home</a></li>
@@ -105,6 +105,8 @@
     </div>
     <p>Todos os direitos reservados &copy; Agência Digital</p>
   </footer>
+
+  <script src="https://kit.fontawesome.com/xxxxxxxxxx.js" crossorigin="anonymous"></script>
   <script src="script.js"></script>
 </body>
 
