feat: Adicionado Nossos Serviços

--- a/index.html
+++ b/index.html
@@ -57,16 +57,38 @@
     <section id="servicos" class="dark">
       <h2>Nossos Serviços</h2>
       <div class="servico">
-        <i class="fas fa-laptop-code"></i>
-        <p>Desenvolvimento Web</p>
+        <i class="topico_servico"></i>
+        <p>Criação de Site</p>
+        <p class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</p>
+        <p>Personalização focada em produtos/serviços</p>
+        <p class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</p>
+        <p>Hospedagem do site incluso</p>
+        <p class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</p>
+        <p>Domínio gratuito</p>
+        <p class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</p>
+        <p>Criação de logomarca</p>
       </div>
       <div class="servico">
-        <i class="fas fa-mobile-alt"></i>
-        <p>Design Responsivo</p>
+        <i class="topico_servico"></i>
+        <p>Design e consultoria em Marketing</p>
+        <p class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</p>
+        <p>Edição de imagens</p>
+        <p class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</p>
+        <p>Gerenciamento de página profissional do Facebook e Instagram</p>
+        <p class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</p>
+        <p>Publicações sociais diárias</p>
       </div>
       <div class="servico">
-        <i class="fas fa-chart-line"></i>
-        <p>Marketing Digital</p>
+        <i class="topico_servico"></i>
+        <p>Relatórios</p>
+        <p class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</p>
+        <p>Análise de concorrência</p>
+        <p class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</p>
+        <p>Análise de público interessado</p>
+        <p class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</p>
+        <p>Criação de loja digital e-commerce</p>
+        <p class="div_serv_personalizado">&nbsp;<strong>|</strong>&nbsp;</p>
+        <p>Suporte e consultoria 24h</p>
       </div>
     </section>
 
