feat: Adicionado icon de planos

--- a/index.html
+++ b/index.html
@@ -93,22 +93,62 @@
     </section>
 
     <section id="portfolio">
-      <h2>Portfólio</h2>
+      <h2>Serviços</h2>
       <div class="portfolio-grid">
         <div class="portfolio-item">
-          <img src="img/portfolio1.jpg" alt="Projeto 1">
-          <h3>Projeto 1</h3>
+          <img src="img/plano_site_simples.png" alt="Projeto 1">
+          <h3>Site Simples</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
         <div class="portfolio-item">
-          <img src="img/portfolio2.jpg" alt="Projeto 2">
-          <h3>Projeto 2</h3>
+          <img src="img/plano_site_avançado.png" alt="Projeto 2">
+          <h3>Site Avançado</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
         <div class="portfolio-item">
-          <img src="img/portfolio3.jpg" alt="Projeto 3">
-          <h3>Projeto 3</h3>
+          <img src="img/plano_site_premium.png" alt="Projeto 3">
+          <h3>Site Premium</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="portfolio">
+      <h2>Planos</h2>
+      <div class="portfolio-grid">
+        <div class="portfolio-item">
+          <img src="img/marketing_simples.gif" alt="Projeto 1">
+          <h3>Marketing Simples</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="portfolio-item">
+          <img src="img/marketing_avancado.gif" alt="Projeto 2">
+          <h3>Marketing Avançado</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+        <div class="portfolio-item">
+          <img src="img/marketing_premium.gif" alt="Projeto 3">
+          <h3>Marketing Premium</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="portfolio">
+      <h2>Plano Exclusivo</h2>
+      <div class="portfolio-grid" id="plano_exclusivo">
+        <div class="portfolio-item">
+          <img src="img/marketing_exclusivo.gif" alt="Projeto 1">
+          <h3>Marketing Exclusivo</h3>
+          <div class="elegant-background">
+            <h6>Tudo do Marketing Simples, Avançado e Premium mais:</h6>
+            <hr>
+            <ul>
+              <li>Acesso exclusivo à sua loja virtual.</li>
+              <li>Aluguel de câmera profissional inclusa.</li>
+              <li>Plataforma exclusiva.</li>
+            </ul>
+          </div>
         </div>
       </div>
     </section>
