feat: Adicionado texto dos serviços e planos

--- a/index.html
+++ b/index.html
@@ -93,43 +93,106 @@
     </section>
 
     <section id="portfolio">
-      <h2>Serviços</h2>
+      <h2>Escolha seu Serviços</h2>
       <div class="portfolio-grid">
         <div class="portfolio-item">
           <img src="img/plano_site_simples.png" alt="Projeto 1">
           <h3>Site Simples</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <div class="elegant-background">
+            <h6>Valor promocional:</h6>
+            <hr>
+            <ul>
+              <li>Fotos e serviços/produtos da empresa</li>
+              <li>Definição de visual é por parte da agência (não aceita referências).</li>
+              <li>Cliente pode escolher cores.</li>
+              <li>Hospedagem do site incluso.</li>
+              <li>Domínio gratuito ou possibilidade de personalizar (.com, .com.br, .net, etc).</li>
+              <li>Suporte e consultoria gratuitos 24h.</li>
+              <li>Botão de Whatsapp.</li>
+            </ul>
+          </div>
         </div>
         <div class="portfolio-item">
           <img src="img/plano_site_avançado.png" alt="Projeto 2">
           <h3>Site Avançado</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <div class="elegant-background">
+            <h6>Tudo do Site Simples mais:</h6>
+            <hr>
+            <ul>
+              <li>Visual personalizado e atualizações durante um mês.</li>
+              <li>Botão do Google Maps (traça a rota para a empresa).</li>
+              <li>Botões personalizados para as redes sociais e e-mail.</li>
+              <li>Otimização para busca no Google.</li>
+            </ul>
+          </div>
         </div>
         <div class="portfolio-item">
           <img src="img/plano_site_premium.png" alt="Projeto 3">
           <h3>Site Premium</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <div class="elegant-background">
+            <h6>Tudo do Site Simples e Site Avançado mais:</h6>
+            <hr>
+            <ul>
+              <li>Design e consultoria em Marketing.</li>
+              <li>Captação de pessoas interessadas (formulários para captura de nome e telefone).</li>
+              <li>Personalização focada em produtos/serviços (possibilidade de expor produtos/promoções e serviços para captura de interessados).</li>
+              <li>Visual premium e focado na marca.</li>
+              <li>Edição de imagens para o site (fotos da loja, produtos, etc).</li>
+              <li>Até três personalizações completas (layout, estrutura, fontes, cores, banners e produtos) por mês.</li>
+              <li>Site para celulares, tablets e computadores.</li>
+            </ul>
+          </div>
         </div>
       </div>
     </section>
 
     <section id="portfolio">
-      <h2>Planos</h2>
+      <h2>Escolha seu Plano</h2>
       <div class="portfolio-grid">
         <div class="portfolio-item">
           <img src="img/marketing_simples.gif" alt="Projeto 1">
           <h3>Marketing Simples</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <div class="elegant-background">
+            <h6>Incluso pacote Site Premium</h6>
+            <hr>
+            <ul>
+              <li>Criação e gerenciamento de página profissional do Facebook e Instagram.</li>
+              <li>16 publicações por mês (as mesmas para ambas as plataformas).</li>
+              <li>Relatório mensal de análise de concorrência.</li>
+              <li>Relatório mensal de análise de público interessado.</li>
+              <li>Criação de loja digital e-commerce (? mercado livre ou shopee).</li>
+            </ul>
+          </div>
         </div>
         <div class="portfolio-item">
           <img src="img/marketing_avancado.gif" alt="Projeto 2">
           <h3>Marketing Avançado</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <div class="elegant-background">
+            <h6>Tudo do Marketing Simples mais:</h6>
+            <hr>
+            <ul>
+              <li>Criação de logomarca personalizada.</li>
+              <li>Publicações de ofertas com impulsionamento.</li>
+              <li>36 publicações por mês (as mesmas para ambas as plataformas).</li>
+              <li>Criação do Perfil da Empresa no Google (somente cadastro).</li>
+              <li>Inserção do negócio no Google Maps.</li>
+              <li>Criação de e-mail personalizado (contato@seunegocio.com.br).</li>
+            </ul>
+          </div>
         </div>
         <div class="portfolio-item">
           <img src="img/marketing_premium.gif" alt="Projeto 3">
           <h3>Marketing Premium</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <div class="elegant-background">
+            <h6>Tudo do Marketing Simples e Avançado mais:</h6>
+            <hr>
+            <ul>
+              <li>Loja virtual completa (adição e alteração de produtos, múltiplas formas de pagamento e envio pelos correios incluso) com gerenciamento incluso.</li>
+              <li>64 publicações por mês (Instagram e Facebook separados).</li>
+              <li>Monitoramento do perfil da empresa, inserção de fotos do local e interações com o público.</li>
+              <li>Captura profissional de até 10 fotos inclusa.</li>
+            </ul>
+          </div>
         </div>
       </div>
     </section>
