feat: Adicionado contatos

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <ul class="menu">
         <li><a href="#home">Home</a></li>
         <li><a href="#servicos">Serviços</a></li>
-        <li><a href="#portfolio">Portfólio</a></li>
-        <li><a href="#contato">Contato</a></li>
+        <li><a href="#portfolio">Planos</a></li>
+        <li><a href="https://wa.me/5555996078831?text=Tenho%20interesse%20em%20serviços%20ou%20produtos%20da%20AND" target="_blank">Contato</a></li>
       </ul>
     </nav>
   </header>
@@ -145,7 +145,7 @@
             </ul>
           </div>
         </div>
-        
+
       </div>
     </section>
 
@@ -219,27 +219,20 @@
       </div>
     </section>
 
-    <section id="contato">
-      <h2>Entre em Contato</h2>
-      <form onsubmit="return validateForm()">
-        <input type="text" id="name" name="name" placeholder="Nome">
-        <input type="email" id="email" name="email" placeholder="Email">
-        <textarea id="message" name="message" placeholder="Mensagem"></textarea>
-        <button type="submit">Enviar</button>
-      </form>
-    </section>
   </main>
 
   <footer>
     <div class="content">
       <div class="footer-logo">
-        <h1>Agência Digital</h1>
+        <div class="logo">
+          <img src="img/logo.png" alt="Logo Agencia de Negócios Digitais">
+        </div>
       </div>
       <ul class="footer-menu">
         <li><a href="#home">Home</a></li>
         <li><a href="#servicos">Serviços</a></li>
-        <li><a href="#portfolio">Portfólio</a></li>
-        <li><a href="#contato">Contato</a></li>
+        <li><a href="#portfolio">Planos</a></li>
+        <li><a href="https://wa.me/5555996078831?text=Tenho%20interesse%20em%20serviços%20ou%20produtos%20da%20AND" target="_blank">Contato</a></li>
       </ul>
       <div class="social-media">
         <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -247,7 +240,7 @@
         <a href="#"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
-    <p>Todos os direitos reservados &copy; Agência Digital</p>
+    <p class="direitos">Todos os direitos reservados &copy; AND</p>
   </footer>
 
   <script src="https://kit.fontawesome.com/xxxxxxxxxx.js" crossorigin="anonymous"></script>
