feat: Adicionado botão saiba mais

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       <div class="texto_home">
         <h2>Bem-vindo à Agência de Negócios Digitais (<strong>AND</strong>)</h2>
         <p>Sua parceira estratégica para impulsionar empresas que ainda não estão presentes na internet. Estamos aqui para ajudar a sua empresa a entrar no mundo digital e alcançar novas oportunidades de crescimento.</p>
-        <p>Com os nossos <strong>planos e serviços</strong>, oferecemos soluções completas e personalizadas para atender às suas necessidades.<a href="#planos_e_servicos" class="btn_texto"><strong>Confira as opções disponíveis</strong></a>.</p>
-        <a href="#contato" class="btn" id="btn_contato_home">Entre em Contato</a>
+        <p>Com os nossos <strong>planos e serviços</strong>, oferecemos soluções completas e personalizadas para atender às suas necessidades.<a href="#portfolio" class="btn_texto"><strong>Confira as opções disponíveis</strong></a>.</p>
+        <a href="https://wa.me/5555996078831?text=Tenho%20interesse%20em%20serviços%20ou%20produtos%20da%20AND" target="_blank" class="btn" id="btn_contato_home">Entre em Contato</a>
       </div>
       <div class="slideshow">
         <img class="slide" src="img/slide_show_0.jpg">
@@ -109,7 +109,12 @@
               <li>Domínio gratuito ou possibilidade de personalizar (.com, .com.br, .net, etc).</li>
               <li>Suporte e consultoria gratuitos 24h.</li>
               <li>Botão de Whatsapp.</li>
+              <li>+ Sistema completo para agendamento de atendimento</li>
+              <li>+ Sistema de controle de estoque</li>
+              <li>+ Sistema de vendas por delivery e presencial</li>
+              <li>+ Cardápio exclusivo e editável</li>
             </ul>
+            <a href="./servicos.html" class="btn" id="btn_contato_saiba_mais"><strong>Saiba mais</strong></a>
           </div>
         </div>
 
@@ -125,6 +130,7 @@
               <li>Botões personalizados para as redes sociais e e-mail.</li>
               <li>Otimização para busca no Google.</li>
             </ul>
+            <a href="./servicos.html" class="btn" id="btn_contato_saiba_mais"><strong>Saiba mais</strong></a>
           </div>
         </div>
 
@@ -143,6 +149,7 @@
               <li>Até três personalizações completas (layout, estrutura, fontes, cores, banners e produtos) por mês.</li>
               <li>Site para celulares, tablets e computadores.</li>
             </ul>
+            <a href="./servicos.html" class="btn" id="btn_contato_saiba_mais"><strong>Saiba mais</strong></a>
           </div>
         </div>
 
@@ -165,8 +172,10 @@
               <li>Relatório mensal de análise de público interessado.</li>
               <li>Criação de loja digital e-commerce (? mercado livre ou shopee).</li>
             </ul>
+            <a href="./planos.html" class="btn" id="btn_contato_saiba_mais"><strong>Saiba mais</strong></a>
           </div>
         </div>
+
         <div class="portfolio-item">
           <img src="img/marketing_avancado.gif" alt="Projeto 2">
           <h3>Marketing Avançado</h3>
@@ -181,8 +190,10 @@
               <li>Inserção do negócio no Google Maps.</li>
               <li>Criação de e-mail personalizado (contato@seunegocio.com.br).</li>
             </ul>
+            <a href="./planos.html" class="btn" id="btn_contato_saiba_mais"><strong>Saiba mais</strong></a>
           </div>
         </div>
+
         <div class="portfolio-item">
           <img src="img/marketing_premium.gif" alt="Projeto 3">
           <h3>Marketing Premium</h3>
@@ -195,6 +206,7 @@
               <li>Monitoramento do perfil da empresa, inserção de fotos do local e interações com o público.</li>
               <li>Captura profissional de até 10 fotos inclusa.</li>
             </ul>
+            <a href="./planos.html" class="btn" id="btn_contato_saiba_mais"><strong>Saiba mais</strong></a>
           </div>
         </div>
       </div>
@@ -214,6 +226,7 @@
               <li>Aluguel de câmera profissional inclusa.</li>
               <li>Plataforma exclusiva.</li>
             </ul>
+            <a href="./planos.html" class="btn" id="btn_contato_saiba_mais"><strong>Saiba mais</strong></a>
           </div>
         </div>
       </div>
