feat: adicionado serviços extra

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
     <section id="portfolio">
       <h2>Escolha seu Serviços</h2>
       <div class="portfolio-grid">
+        
         <div class="portfolio-item">
           <img src="img/plano_site_simples.png" alt="Projeto 1">
           <h3>Site Simples</h3>
@@ -109,10 +110,12 @@
               <li>Domínio gratuito ou possibilidade de personalizar (.com, .com.br, .net, etc).</li>
               <li>Suporte e consultoria gratuitos 24h.</li>
               <li>Botão de Whatsapp.</li>
-              <li>+ Sistema completo para agendamento de atendimento</li>
-              <li>+ Sistema de controle de estoque</li>
-              <li>+ Sistema de vendas por delivery e presencial</li>
-              <li>+ Cardápio exclusivo e editável</li>
+              <hr>
+              <br>
+              <li class="plus-item">Sistema completo para agendamento de atendimento</li>
+              <li class="plus-item">Sistema de controle de estoque</li>
+              <li class="plus-item">Sistema de vendas por delivery e presencial</li>
+              <li class="plus-item">Cardápio exclusivo e editável</li>
             </ul>
             <a href="./servicos.html" class="btn" id="btn_contato_saiba_mais"><strong>Saiba mais</strong></a>
           </div>
@@ -129,6 +132,12 @@
               <li>Botão do Google Maps (traça a rota para a empresa).</li>
               <li>Botões personalizados para as redes sociais e e-mail.</li>
               <li>Otimização para busca no Google.</li>
+              <hr>
+              <br>
+              <li class="plus-item">Sistema completo para agendamento de atendimento</li>
+              <li class="plus-item">Sistema de controle de estoque</li>
+              <li class="plus-item">Sistema de vendas por delivery e presencial</li>
+              <li class="plus-item">Cardápio exclusivo e editável</li>
             </ul>
             <a href="./servicos.html" class="btn" id="btn_contato_saiba_mais"><strong>Saiba mais</strong></a>
           </div>
@@ -148,6 +157,12 @@
               <li>Edição de imagens para o site (fotos da loja, produtos, etc).</li>
               <li>Até três personalizações completas (layout, estrutura, fontes, cores, banners e produtos) por mês.</li>
               <li>Site para celulares, tablets e computadores.</li>
+              <hr>
+              <br>
+              <li class="plus-item">Sistema completo para agendamento de atendimento</li>
+              <li class="plus-item">Sistema de controle de estoque</li>
+              <li class="plus-item">Sistema de vendas por delivery e presencial</li>
+              <li class="plus-item">Cardápio exclusivo e editável</li>
             </ul>
             <a href="./servicos.html" class="btn" id="btn_contato_saiba_mais"><strong>Saiba mais</strong></a>
           </div>
@@ -171,6 +186,12 @@
               <li>Relatório mensal de análise de concorrência.</li>
               <li>Relatório mensal de análise de público interessado.</li>
               <li>Criação de loja digital e-commerce (? mercado livre ou shopee).</li>
+              <hr>
+              <br>
+              <li class="plus-item">Sistema completo para agendamento de atendimento</li>
+              <li class="plus-item">Sistema de controle de estoque</li>
+              <li class="plus-item">Sistema de vendas por delivery e presencial</li>
+              <li class="plus-item">Cardápio exclusivo e editável</li>
             </ul>
             <a href="./planos.html" class="btn" id="btn_contato_saiba_mais"><strong>Saiba mais</strong></a>
           </div>
@@ -189,6 +210,12 @@
               <li>Criação do Perfil da Empresa no Google (somente cadastro).</li>
               <li>Inserção do negócio no Google Maps.</li>
               <li>Criação de e-mail personalizado (contato@seunegocio.com.br).</li>
+              <hr>
+              <br>
+              <li class="plus-item">Sistema completo para agendamento de atendimento</li>
+              <li class="plus-item">Sistema de controle de estoque</li>
+              <li class="plus-item">Sistema de vendas por delivery e presencial</li>
+              <li class="plus-item">Cardápio exclusivo e editável</li>
             </ul>
             <a href="./planos.html" class="btn" id="btn_contato_saiba_mais"><strong>Saiba mais</strong></a>
           </div>
@@ -205,6 +232,12 @@
               <li>64 publicações por mês (Instagram e Facebook separados).</li>
               <li>Monitoramento do perfil da empresa, inserção de fotos do local e interações com o público.</li>
               <li>Captura profissional de até 10 fotos inclusa.</li>
+              <hr>
+              <br>
+              <li class="plus-item">Sistema completo para agendamento de atendimento</li>
+              <li class="plus-item">Sistema de controle de estoque</li>
+              <li class="plus-item">Sistema de vendas por delivery e presencial</li>
+              <li class="plus-item">Cardápio exclusivo e editável</li>
             </ul>
             <a href="./planos.html" class="btn" id="btn_contato_saiba_mais"><strong>Saiba mais</strong></a>
           </div>
@@ -225,6 +258,12 @@
               <li>Acesso exclusivo à sua loja virtual.</li>
               <li>Aluguel de câmera profissional inclusa.</li>
               <li>Plataforma exclusiva.</li>
+              <hr>
+              <br>
+              <li class="plus-item">Sistema completo para agendamento de atendimento</li>
+              <li class="plus-item">Sistema de controle de estoque</li>
+              <li class="plus-item">Sistema de vendas por delivery e presencial</li>
+              <li class="plus-item">Cardápio exclusivo e editável</li>
             </ul>
             <a href="./planos.html" class="btn" id="btn_contato_saiba_mais"><strong>Saiba mais</strong></a>
           </div>
