feat: Adicionado valores de planos

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               <li class="plus-item">Sistema de vendas por delivery e presencial</li>
               <li class="plus-item">Cardápio exclusivo e editável</li>
             </ul>
-            <a href="./servicos.html" class="btn" id="btn_contato_saiba_mais"><strong>Saiba mais</strong></a>
+            <a href="./servicos.html" target="_blank" class="btn" id="btn_contato_saiba_mais"><strong>Saiba mais</strong></a>
           </div>
         </div>
 
@@ -295,7 +295,7 @@
     <p class="direitos">Todos os direitos reservados &copy; AND</p>
   </footer>
 
-  <script src="https://kit.fontawesome.com/xxxxxxxxxx.js" crossorigin="anonymous"></script>
+
   <script src="script.js"></script>
 </body>
 
