feat: adicionado tabela e icones dos planos

--- a/servicos.html
+++ b/servicos.html
@@ -38,136 +38,136 @@
         </div>
         <div class="table-row">
           <div class="table-cell" id="table-cell-text">Fotos e serviços/produtos da empresa</div>
-          <div class="table-cell">x</div>
-          <div class="table-cell">x</div>
-          <div class="table-cell">x</div>
+          <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
+          <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
+          <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
         </div>
         <div class="table-row">
           <div class="table-cell" id="table-cell-text">Definição de visual é por parte da agência (não aceita referências).</div>
-          <div class="table-cell">x</div>
-          <div class="table-cell">x</div>
-          <div class="table-cell">x</div>
+          <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
+          <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
+          <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
         </div>
         <div class="table-row">
           <div class="table-cell" id="table-cell-text">Cliente pode escolher cores.</div>
-          <div class="table-cell">x</div>
-          <div class="table-cell">x</div>
-          <div class="table-cell">x</div>
+          <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
+          <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
+          <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
         </div>
         <div class="table-row">
             <div class="table-cell" id="table-cell-text">Hospedagem do site incluso.</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
+            <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
+            <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
+            <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
         </div>
         <div class="table-row">
             <div class="table-cell" id="table-cell-text">Domínio gratuito ou possibilidade de personalizar (.com, .com.br, .net, etc).</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
+            <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
+            <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
+            <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
         </div>
         <div class="table-row">
             <div class="table-cell" id="table-cell-text">Suporte e consultoria gratuitos 24h.</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
+            <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
+            <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
+            <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
         </div>
         <div class="table-row">
             <div class="table-cell" id="table-cell-text">Botão de Whatsapp.</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
+            <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
+            <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
+            <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
         </div>
         <div class="table-row">
             <div class="table-cell" id="table-cell-text">Visual personalizado e atualizações durante um mês.</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
+            <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
         </div>
         <div class="table-row">
             <div class="table-cell" id="table-cell-text">Botão do Google Maps (traça a rota para a empresa).</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
+            <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
         </div>
         <div class="table-row">
             <div class="table-cell" id="table-cell-text">Botões personalizados para as redes sociais e e-mail.</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
+            <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
         </div>
         <div class="table-row">
             <div class="table-cell" id="table-cell-text">Otimização para busca no Google.</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
+            <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
         </div>
         <div class="table-row">
             <div class="table-cell" id="table-cell-text">Design e consultoria em Marketing.</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
         </div>
         <div class="table-row">
             <div class="table-cell" id="table-cell-text">Captação de pessoas interessadas (formulários para captura de nome e telefone).</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
         </div>
         <div class="table-row">
             <div class="table-cell" id="table-cell-text">Personalização focada em produtos/serviços (possibilidade de expor produtos/promoções e serviços para captura de interessados).</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
         </div>
         <div class="table-row">
             <div class="table-cell" id="table-cell-text">Visual premium e focado na marca.</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
         </div>
         <div class="table-row">
             <div class="table-cell" id="table-cell-text">Edição de imagens para o site (fotos da loja, produtos, etc).</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
         </div>
         <div class="table-row">
             <div class="table-cell" id="table-cell-text">Até três personalizações completas (layout, estrutura, fontes, cores, banners e produtos) por mês.</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
         </div>
         <div class="table-row">
             <div class="table-cell" id="table-cell-text">Site para celulares, tablets e computadores.</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
-            <div class="table-cell">x</div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img src="img/cancelar.png" alt=""></div>
+            <div class="table-cell"><img src="img/confirmado.png" alt=""></div>
         </div>
         <br>
         <div class="table-row">
             <div class="table-cell" id="table-cell-text">Sistema completo para agendamento de atendimento.</div>
-            <div class="table-cell"><img src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img src="img/adicional.gif" alt=""></div>
+            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
+            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
+            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
         </div>
         <div class="table-row">
             <div class="table-cell" id="table-cell-text">Sistema de controle de estoque.</div>
-            <div class="table-cell"><img src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img src="img/adicional.gif" alt=""></div>
+            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
+            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
+            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
         </div>
         <div class="table-row">
             <div class="table-cell" id="table-cell-text">Sistema de vendas por delivery e presencial.</div>
-            <div class="table-cell"><img src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img src="img/adicional.gif" alt=""></div>
+            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
+            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
+            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
         </div>
         <div class="table-row">
             <div class="table-cell" id="table-cell-text">Cardápio exclusivo e editável.</div>
-            <div class="table-cell"><img src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img src="img/adicional.gif" alt=""></div>
-            <div class="table-cell"><img src="img/adicional.gif" alt=""></div>
+            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
+            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
+            <div class="table-cell"><img class="adicional" src="img/adicional.gif" alt=""></div>
         </div>
 
         <div class="table-row">
