feat: adicionado links de redirecionamentos

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header>
     <nav>
       <div class="logo">
-        <img src="img/logo.png" alt="Logo Agencia de Negócios Digitais">
+        <a href="index.html"><img src="img/logo.png" alt="Logo Agencia de Negócios Digitais"></a>
       </div>
       <ul class="menu">
         <li><a href="#home">Home</a></li>
