--- a/servicos.html
+++ b/servicos.html
@@ -17,12 +17,12 @@
   <header>
     <nav>
       <div class="logo">
-        <img src="img/logo.png" alt="Logo Agencia de Negócios Digitais">
+        <a href="index.html"><img src="img/logo.png" alt="Logo Agencia de Negócios Digitais"></a>
       </div>
       <ul class="menu">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#servicos">Serviços</a></li>
-        <li><a href="#portfolio">Planos</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html#servicos">Serviços</a></li>
+        <li><a href="index.html#portfolio">Planos</a></li>
         <li><a href="https://wa.me/5555996078831?text=Tenho%20interesse%20em%20serviços%20ou%20produtos%20da%20AND" target="_blank">Contato</a></li>
       </ul>
     </nav>
@@ -189,9 +189,9 @@
         </div>
       </div>
       <ul class="footer-menu">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#servicos">Serviços</a></li>
-        <li><a href="#portfolio">Planos</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html#servicos">Serviços</a></li>
+        <li><a href="index.html#portfolio">Planos</a></li>
         <li><a href="https://wa.me/5555996078831?text=Tenho%20interesse%20em%20serviços%20ou%20produtos%20da%20AND" target="_blank">Contato</a></li>
       </ul>
       <div class="social-media">
