--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               <li>Visual premium e focado na marca.</li>
               <li>Edição de imagens para o site (fotos da loja, produtos, etc).</li>
               <li>Até três personalizações completas (layout, estrutura, fontes, cores, banners e produtos) por mês.</li>
-              <li>Site para celulares, tablets e computadores.</li>
+              <li>Sites com responsividade e alta avaliação google.</li>
               <hr>
               <br>
               <li class="plus-item">Sistema completo para agendamento de atendimento</li>
@@ -277,7 +277,7 @@
     <div class="content">
       <div class="footer-logo">
         <div class="logo">
-          <img src="img/logo.png" alt="Logo Agencia de Negócios Digitais">
+          <a href="index.html"><img src="img/logo.png" alt="Logo Agencia de Negócios Digitais"></a>
         </div>
       </div>
       <ul class="footer-menu">
