refacture: realocado diretorios

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Uma agência que cria e direciona o seu possionamento na internet, oferecendo vários serviços entre eles, marketing, divulgação de marca e identidade digital.">
     <meta name="robots" content="index, follow"> <!--já é padrão-->
     <title>Agência de Negócios Digitais</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="estilos/index.css">
     <link rel="icon" type="image/png" href="img/icon.png">
 </head>
 
@@ -296,7 +296,7 @@
   </footer>
 
 
-  <script src="script.js"></script>
+  <script src="javascript/index.js"></script>
 </body>
 
 </html>
