--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
               <li class="plus-item">Sistema de vendas por delivery e presencial</li>
               <li class="plus-item">Cardápio exclusivo e editável</li>
             </ul>
-            <a href="./planos.html" class="btn" id="btn_contato_saiba_mais"><strong>Saiba mais</strong></a>
+            <a href="./planos.html" target="_blank" class="btn" id="btn_contato_saiba_mais"><strong>Saiba mais</strong></a>
           </div>
         </div>
 
@@ -217,7 +217,7 @@
               <li class="plus-item">Sistema de vendas por delivery e presencial</li>
               <li class="plus-item">Cardápio exclusivo e editável</li>
             </ul>
-            <a href="./planos.html" class="btn" id="btn_contato_saiba_mais"><strong>Saiba mais</strong></a>
+            <a href="./planos.html" target="_blank" class="btn" id="btn_contato_saiba_mais"><strong>Saiba mais</strong></a>
           </div>
         </div>
 
@@ -239,7 +239,7 @@
               <li class="plus-item">Sistema de vendas por delivery e presencial</li>
               <li class="plus-item">Cardápio exclusivo e editável</li>
             </ul>
-            <a href="./planos.html" class="btn" id="btn_contato_saiba_mais"><strong>Saiba mais</strong></a>
+            <a href="./planos.html" target="_blank" class="btn" id="btn_contato_saiba_mais"><strong>Saiba mais</strong></a>
           </div>
         </div>
       </div>
@@ -265,7 +265,7 @@
               <li class="plus-item">Sistema de vendas por delivery e presencial</li>
               <li class="plus-item">Cardápio exclusivo e editável</li>
             </ul>
-            <a href="./planos.html" class="btn" id="btn_contato_saiba_mais"><strong>Saiba mais</strong></a>
+            <a href="./planos.html" target="_blank" class="btn" id="btn_contato_saiba_mais"><strong>Saiba mais</strong></a>
           </div>
         </div>
       </div>
