--- a/planos.html
+++ b/planos.html
@@ -21,6 +21,7 @@
       </div>
       <ul class="menu">
         <li><a href="index.html">Home</a></li>
+        <li><a href="servicos.html">Serviços</a></li>
         <li><a href="https://wa.me/5555996078831?text=Tenho%20interesse%20em%20serviços%20ou%20produtos%20da%20AND" target="_blank">Contato</a></li>
       </ul>
     </nav>
@@ -199,60 +200,29 @@
             <div class="table-cell-valor"><strong>R$<br>200,00</strong></div>
         </div>
        
-        <div class="table-row">
-            <div class="table-cell-servico" id="table-cell-text"></div>
-            <div class="table-cell-valor">
-                <div class="table-cell-compre">
-                    <br>
-                    <a href="https://wa.me/5555996078831?text=Tenho%20interesse%20no%20plano%20do%20Marketing%20Simples" target="_blank" id="btn_contato_compre"><strong>Compre</strong></a>
-                  </div>
-            </div>
-            <div class="table-cell-valor">
-                <div class="table-cell-compre">
-                    <br>
-                    <a href="https://wa.me/5555996078831?text=Tenho%20interesse%20no%20plano%20do%20Marketing%20Avançado" target="_blank" id="btn_contato_compre"><strong>Compre</strong></a>
-                  </div>
-            </div>
-            <div class="table-cell-valor">
-                <div class="table-cell-compre">
-                    <br>
-                    <a href="https://wa.me/5555996078831?text=Tenho%20interesse%20no%20plano%20do%20Marketing%20Premium" target="_blank" id="btn_contato_compre"><strong>Compre</strong></a>
-                  </div>
-            </div>
-            <div class="table-cell-valor">
-                <div class="table-cell-compre">
-                    <br>
-                    <a href="https://wa.me/5555996078831?text=Tenho%20interesse%20no%20plano%20do%20Marketing%20Exclusivo" target="_blank" id="btn_contato_compre"><strong>Compre</strong></a>
-                  </div>
-            </div>
-        </div>
-
-
-
-
-<!--
         <div class="table-row-compre">
           <div></div>
           <div class="table-cell-compre">
             <br>
-            <a href="https://wa.me/5555996078831?text=Tenho%20interesse%20no%20serviços%20do%20Site%20Simples" target="_blank" id="btn_contato_compre"><strong>Compre</strong></a>
+            <a href="https://wa.me/5555996078831?text=Tenho%20interesse%20no%20plano%20do%20Marketing%20Simples" target="_blank" id="btn_contato_compre"><strong>Compre</strong></a>
           </div>
-          <div class="table-cell-valor">
+          <div class="table-cell-compre">
             <br>
-            <a href="https://wa.me/5555996078831?text=Tenho%20interesse%20no%20serviços%20do%20Site%20Avançado" target="_blank" id="btn_contato_compre"><strong>Compre</strong></a>
+            <a href="https://wa.me/5555996078831?text=Tenho%20interesse%20no%20plano%20do%20Marketing%20Avançado" target="_blank" id="btn_contato_compre"><strong>Compre</strong></a>
           </div>
-          <div class="table-cell-valor">
+          <div class="table-cell-compre">
             <br>
-            <a href="https://wa.me/5555996078831?text=Tenho%20interesse%20no%20serviços%20do%20Site%20Premium" target="_blank" id="btn_contato_compre"><strong>Compre</strong></a>
+            <a href="https://wa.me/5555996078831?text=Tenho%20interesse%20no%20plano%20do%20Marketing%20Premium" target="_blank" id="btn_contato_compre"><strong>Compre</strong></a>
           </div>
-          <div class="table-cell-valor">
+          <div class="table-cell-compre">
             <br>
-            <a href="https://wa.me/5555996078831?text=Tenho%20interesse%20no%20serviços%20do%20Site%20Premium" target="_blank" id="btn_contato_compre"><strong>Compre</strong></a>
+            <a href="https://wa.me/5555996078831?text=Tenho%20interesse%20no%20plano%20do%20Marketing%20Exclusivo" target="_blank" id="btn_contato_compre"><strong>Compre</strong></a>
           </div>
-        </div>-->
-
-    </div>
-
+        </div>
+      </div>
+      <div class="obs_planos">
+        <p><strong>*</strong> Esses valores contemplam uma permanencia de contrato verbal de 3 meses.</p>
+      </div>
   </main>
 
   <footer>
